=head1 NAME

aa_monitor changelog

=head1 VERSIONS

=head2 1.1.2

=over

=item * new module L<B<HTTPSmoothStreaming>|P9::AA::Check::HTTPSmoothStreaming>

=item * new module L<B<HTTPLiveStreaming>|P9::AA::Check::HTTPLiveStreaming>

=item * Added Win32, OS/2 support to L<P9::AA::Config>

=back

=head2 1.1.1

=over

=item * new module L<B<ArecaRAID>|P9:AA::Check::ArecaRAID> - L<Areca|http://www.areca.com.tw> hardware RAID checking module

=back

=head2 1.1.0

=over

=item * feature: command line/nagios/icinga client can now read check parameters in JSON format from file or stdin

=item * feature: command line client can now display readme, credits and changelog documentation

=item * new module L<B<ApacheSolr>|P9::AA::Check::ApacheSolr> - checks your L<Apache Solr|http://lucene.apache.org/solr> server :)

=item * new module L<B<HAProxy>|P9::AA::Check::HAProxy> - check your L<HAProxy|http://haproxy.wt1.eu> load balancer.

=item * new module L<B<StackedCheck>|P9::AA::Check::StackedCheck> - perform complex checks embeding other check modules.

=item * modules L<B<DBI>|P9::AA::Check::DBI>, L<B<DBIReplication>|P9::AA::Check::DBIReplication>; minor Icinga/Nagios related fixes (replace \; with ; in DSN specification).

=item * module L<B<DBIReplication>|P9::AA::Check::DBIReplication>: new parameters: B<table_name> - ability specify replication table name;
B<two_way> - two-way replication check

=item * module L<B<URL>|P9::AA::Check::URL>: new parameter: B<redirects> - maximum number of allowed redirects

=item * module: L<B<Mount>|P9::AA::Check::Mount> - implemented LABEL/UUID support on Linux platform

=item * module: L<B<Process>|P9::AA::Check::Process> - implemented parameter B<max_process_count>.

=item * helper module L<B<_Socket>|P9::AA::Check::_Socket>: Implemented L<B<IO::Socket::SSL>|IO::Socket::SSL> version <= B<1.44> warning

=item * new output renderer: L<B<Storable>|P9::AA::Renderer::STORABLE>
